# Iris

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
info/: __init__.py
info/gianlucacosta/iris/: ioc.py  rendering.py  vars.py  versioning.py
info/gianlucacosta/iris/tests/: test_ioc.py  test_rendering.py  test_vars.py  test_versioning.py
info/gianlucacosta/iris/tests/io/: test_filetree.py  test_utils.py
info/gianlucacosta/iris/tests/io/filetree/alpha/beta/: ni.java
info/gianlucacosta/iris/tests/io/filetree/gamma/: spaces.txt
iris/: __init__.py  ioc.py  maven.py  rendering.py  vars.py  versioning.py
iris/io/: filetree.py  utils.py
scripts/: rmheader.py  rmlicense.py  rmspaces.py
src/info/gianlucacosta/iris/: ioc.py  maven.py  rendering.py  vars.py  versioning.py
src/info/gianlucacosta/iris/io/: __init__.py  filetree.py  utils.py
src/info/gianlucacosta/iris/scripts/: rmheader.py  rmlicense.py  rmspaces.py
src/iris/: MANIFEST.in  README.rst  setup.py
src/iris/iris/: __init__.py  io.py  ioc.py  maven.py  rendering.py  strings.py  vars.py  versioning.py  web.py
src/iris/iris/tests/: __init__.py  test_io.py  test_ioc.py  test_maven.py  test_rendering.py  test_strings.py  test_vars.py  test_versioning.py  test_web.py  tests_kernel.py
tests/: __init__.py  test_ioc.py  test_maven.py  test_rendering.py  test_vars.py  test_versioning.py
tests/io/: __init__.py  test_filetree.py  test_utils.py
tests/io/filetree/alpha/beta/: lambda.java  mi.txt
